5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1638_2731.log
== SUBMITION (2019-04-11 10:49:40) 
-- CODE:
x = float(input("insira a coordenada x: "))
y = float(input("insira a coordenada y: "))
r = float(input("insira o raio r: "))

x1 = (x - a)**2 + (y - b)**2 = r**2

if (a > 0 and b > 0):
	print("Superiores")
if (a < 0 and b > 0):
	print("Superiores")
if (a > 0 and y < 0):
	print("Inferiores")
if (a < 0 and y < 0):
	print("Inferiores")

-- EXECUTION TIME:
0.231114
-- ERROR:
  File "/home/codebench/codes/1638/2731/main.py", line 5
    x1 = (x - a)**2 + (y - b)**2 = r**2
        ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:43) 
-- CODE:
x = float(input("insira a coordenada x: "))
y = float(input("insira a coordenada y: "))
r = float(input("insira o raio r: "))

x1 = (x - a)**2 + (y - b)**2 = r**2

if (a > 0 and b > 0):
	print("Superiores")
if (a < 0 and b > 0):
	print("Superiores")
if (a > 0 and y < 0):
	print("Inferiores")
if (a < 0 and y < 0):
	print("Inferiores")

-- ERROR:
File "XXXX", line 5
    x1 = (x - a)**2 + (y - b)**2 = r**2
        ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:59) 
-- CODE:
x = float(input("insira a coordenada x: "))
y = float(input("insira a coordenada y: "))
r = float(input("insira o raio r: "))

(x - a)**2 + (y - b)**2 = r**2

if (a > 0 and b > 0):
	print("Superiores")
if (a < 0 and b > 0):
	print("Superiores")
if (a > 0 and y < 0):
	print("Inferiores")
if (a < 0 and y < 0):
	print("Inferiores")

-- ERROR:
File "XXXX", line 5
    (x - a)**2 + (y - b)**2 = r**2
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:28) 
-- CODE:
a = float(input("insira a coordenada a: "))
b= float(input("insira a coordenada b "))
r = float(input("insira o raio r: "))

r**2 = (x - a)**2 + (y - b)**2

if (a > 0 and b > 0):
	print("Superiores")
if (a < 0 and b > 0):
	print("Superiores")
if (a > 0 and y < 0):
	print("Inferiores")
if (a < 0 and y < 0):
	print("Inferiores")

-- ERROR:
File "XXXX", line 5
    r**2 = (x - a)**2 + (y - b)**2
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:52:32) 
-- CODE:
a = float(input("insira a coordenada a: "))
b= float(input("insira a coordenada b "))
r = float(input("insira o raio r: "))

r**2 = (x - a)**2 + (y - b)**2

if (a > 0 and b > 0):
	print("Superiores")
if (a < 0 and b > 0):
	print("Superiores")
if (a > 0 and y < 0):
	print("Inferiores")
if (a < 0 and y < 0):
	print("Inferiores")

-- ERROR:
File "XXXX", line 5
    r**2 = (x - a)**2 + (y - b)**2
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:54:50) 
-- CODE:
a = float(input("insira a coordenada a: "))
b= float(input("insira a coordenada b "))
r = float(input("insira o raio r: "))



if  (b > 0):
	print("Superiores")

if (b < 0):
	print("Inferiores")

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:54:58) 
-- CODE:
a = float(input("insira a coordenada a: "))
b= float(input("insira a coordenada b "))
r = float(input("insira o raio r: "))



if  (b > 0):
	print("Superiores")

if (b < 0):
	print("Inferiores")

-- EXECUTION TIME:
0.129125
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
